Added settings through environment vars

--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,7 @@
                     <div class="form-group">
                         <div class="input-group">
                             <input class="form-control input-lg" type="text" placeholder="my-own-hostname">
-                            <div class="input-group-addon input-lg">.d.pboehm.de</div>
+                            <div class="input-group-addon input-lg">{{.domain}}</div>
                         </div>
                     </div>
                 </form>
